--- a/css/index.css
+++ b/css/index.css
@@ -94,9 +94,9 @@ button {
 .contenedor-cuadrito-curso {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: stretch;
     width: 100%;
     align-content: space-around;
 
@@ -189,7 +189,7 @@ button {
 
 .boton-cartelito {
     background-color: rgb(255, 226, 231);
-    position: relative;
+    /* position: relative; */
     top: -14px;
     padding: 4px;
     border-radius: 6em;
@@ -204,102 +204,9 @@ button {
     color:white;
     background-color: chocolate;
 }
-
-
-/*MODAL*/
-
-.modal {
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.637);
-    display: flex;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    overflow: auto;
-    transition: opacity .6s;
-    --transform: translatey(-100vh);
-    --transition: transform .8s;
-}
-
-/*creo una clase modificadora*/
-
-.modal--show {
-    opacity: 1;
-    pointer-events: unset;
-    transition: opacity .6s;
-    --transform: translatey(0);
-    --transition: transform .8s .8s;
-    z-index: 13;
-    position: fixed;
-
-}
-
-#modal_contenedor {
-    background-color: antiquewhite;
-    display: grid;
-    gap: 1em;
-    place-items: center;
-    grid-auto-columns: 100%;
-    margin: 11%;
-    padding: 14px;
-    width: 80%;
+.ppp{
     text-align: center;
-    border-radius: 5px;
-    transform: var(--transform);
-    transition: var(--transition);
-    position: fixed;
-
+    position: relative;
 }
 
-.no-modal {
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.637);
-    display: flex;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    align-items: center;
-    overflow: auto;
-    transition: opacity .6s;
-    --transform: translatey(-100vh);
-    --transition: transform .8s;
-}
 
-.modal_titulo {
-    font-size: 2em;
-    text-align: center;
-    font-family: fantasy;
-}
-
-.modal_img {
-    width: 98%;
-    max-width: 170px;
-}
-
-.cerrar_modal {
-    text-decoration: none;
-    color: #ffffff;
-    background-color: rgb(124, 9, 78);
-    padding: 1em 3em;
-    border: 1px solid;
-    border-radius: 6px;
-    display: inline-block;
-    font-weight: 300;
-    transition: background-color.3s;
-
-}
-
-.cerrar_modal:hover {
-    color: rgb(62, 0, 121);
-    background-color: rgb(242, 223, 255);
-
-}
-
-.d-none {
-    display: none;
-}
