--- a/css/estilo-todas-las-pag.css
+++ b/css/estilo-todas-las-pag.css
@@ -161,17 +161,19 @@ input {
 .footerrrr {
     display: flex;
     width: 100%;
-    margin: 10px;
     background-color: rgb(11, 4, 18);
     padding: 16px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: stretch;
+    flex-direction: row;
+    align-content: space-around;
+    justify-content: space-between;
 
 }
 
 
 .datos {
-    width: 100%;
+    width: 33%;
     padding: 20px;
     color: chocolate;
     font-family: cursive;
