--- a/css/gif.css
+++ b/css/gif.css
@@ -19,24 +19,28 @@
     height: auto;
     display: flex;
     flex-direction: row;
-    margin-top: 45px;
-    margin-bottom: 190px;
+    /* margin-top: 45px; */
+    /* margin-bottom: 190px; */
     text-align: center;
     position: relative;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
 
 }
 
 .contenedor1 {
+    margin-bottom: 134px;
     display: flex;
     flex-direction: column;
     position: relative;
     margin-right: 50px;
-    /* align-content: flex-end; */
+    align-content: center;
     flex-wrap: nowrap;
-    align-items: baseline;
+    align-items: stretch;
     margin-left: 10%;
+    margin-top: 21px;
 }
 
 .axol {
@@ -84,7 +88,7 @@
     background-color: rgb(255 255 255);
     /* border-radius: 26px 0px; */
     top: 45px;
-    left: 271px;
+    left: 268px;
     width: 42%;
     /* height: 9%; */
     text-align: center;
@@ -123,17 +127,18 @@
 /*----------- formulario de la gif --------------------------------------------------------------------------------------------------*/
 .contenedor2 {
     display: flex;
-    width: 100%;
+    width: 78%;
     position: relative;
     margin-left: 53px;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     /* margin: 0em 0; */
-    margin-bottom: 0.3em;
-    align-content: flex-start;
-    margin-bottom: 10px;
+    /* margin-bottom: 0.3em; */
+    align-content: stretch;
+    /* margin-bottom: 10px; */
     align-items: baseline;
+  
 }
 
 
@@ -194,13 +199,14 @@
     display: flex;
     width: 50%;
     margin-bottom: 10px;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .contenedor-de-tamaño {
     display: flex;
     width: 50%;
     margin-bottom: 10px;
+    justify-content: flex-start;
 }
 
 .tamaño {
@@ -214,6 +220,8 @@
 .contenedor-posicion {
     display: flex;
     width: 50%;
+    margin-bottom: 10px;
+    justify-content: flex-start;
 
 }
 
@@ -300,7 +308,7 @@
     position: relative;
     background-color: rgb(255 255 255);
     top: 45px;
-    left: 1px;
+    left: -124px;
     width: 42%;
     text-align: center;
     padding: 10px;
@@ -315,7 +323,7 @@
     position: relative;
     background-color: rgb(255 255 255);
     top: 467px;
-    left: 2px;
+    left: 136px;
     width: 42%;
     text-align: center;
     padding: 10px;
@@ -331,7 +339,7 @@
     position: relative;
     background-color: rgb(255 255 255);
     top: 45px;
-    /* left: 203px; */
+    left: 134px;
     width: 42%;
     text-align: center;
     padding: 10px;
